[package]
name = "ata"
version = "2.0.1"
edition = "2021"
authors = ["Rik Huijzer <t.h.huijzer@rug.nl>", "Fredrick R. Brennan <copypaste@kittens.ph>"]
license = "MIT"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
directories = "4.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23" }
os_str_bytes = "6.4.1"
rustyline = "10.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.6" }

[dev-dependencies]
pretty_assertions = "1"
