[package]
name = "ata"
version = "2.0.4"
edition = "2021"
authors = ["The ATA Developers"]
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0"
hyper = { version = "1.4", features = ["full"] }
hyper-rustls = { version = "0.23" }
os_str_bytes = { version = "7", features = ["conversions"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8" }

[dev-dependencies]
pretty_assertions = "1"
